# DAOKit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  v1.3规划.md
.github/workflows/: contracts-check.yml  v11-hardening-gate.yml
contracts/: README.md  events.schema.json  heartbeat_status.schema.json  pipeline_state.schema.json  process_leases.schema.json
docs/: architecture.md  backend-to-agent-workflows.md  cli-quickstart.md  engine-rollout-rollback-runbook.md  error-catalog.md  extensions.md  faq.md  observer-relay-feasibility.md  observer-relay-optimization-plan.md  observer-relay-persona-and-compaction.md  observer-relay-rollback-runbook.md  roadmap.md
docs/contributors/: skill-manifest-template.md  tool-adapter-template.md
docs/plans/: 2026-02-11-daokit-implementation-plan.md
docs/reports/: FINAL_ACCEPTANCE.md  criteria-map.json  criteria-map.md  evidence-linkage-conventions.md
docs/workflows/: codex-integration-runbook.en.md  codex-integration-runbook.zh-CN.md  core-rotation-chaos-matrix.en.md  langchain-langgraph-rag-cooperation.en.md  langchain-langgraph-rag-cooperation.zh-CN.md  multi-agent-collaboration.en.md  multi-agent-collaboration.zh-CN.md  (+4 more)
handoff/: BOOTSTRAP.md  STATE.md
references/: spec-workflow-mcp-status.md
research/: zhukong-consistency-and-heartbeat-analysis.md
runbooks/: operator-cli-recovery.md  zhukong-execution-runbook.md
scripts/: check_criteria_linkage.py
tests/: test_init.py  test_release_check.py  test_text_input_minimal_flow.py
(+368 files in other folders)
