[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daokit"
version = "0.1.0"
description = "Orchestrator-first agent engineering kit skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
langchain = [
    "langchain>=0.2.0",
]
langgraph = [
    "langgraph>=0.2.0",
]
integration = [
    "langchain>=0.2.0",
    "langgraph>=0.2.0",
]
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
]
llm = [
    "openai>=1.0.0",
]
dashboard = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]

[project.scripts]
daokit = "daokit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
